[package]
name = "music"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bluetooth = ["clap", "serialport"]

[dependencies]
rodio = "*"
rand = "*"

[dependencies.clap]
version = "*"
optional = true

[dependencies.serialport]
version = "*"
optional = true